src/objects/ffbf__PaymentMediaDetailTest__c.object
<CustomObject>
    <fields>
        <fullName>ffbf__DocumentNumber__c</fullName>
        <label>Document Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentMediaSummary__c</fullName>
        <label>Payment Media Summary</label>
        <referenceTo>ffbf__PaymentMediaSummaryTest__c</referenceTo>
        <relationshipLabel>Payment Media Detail Tests</relationshipLabel>
        <relationshipName>Payment_Media_Detail_Tests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentType__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbf__Reference__c</fullName>
        <formula>If (TEXT(ffbf__PaymentType__c) = &quot;Payments&quot;,  ffbf__VendorReference__c ,  ffbf__DocumentNumber__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__VendorReference__c</fullName>
        <label>Vendor Reference</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Payment Media Detail Test</label>
    <nameField>
        <displayFormat>PMDT{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Media Detail Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>